--- a/_data/urls.yml
+++ b/_data/urls.yml
@@ -9,3 +9,7 @@ mi-wiki-abgabe:
 mi-wiki-pruefung:
   name: Medieninformatik Wiki
   url: http://www.medieninformatik.fh-koeln.de/w/
+
+issues:
+  name: Issues
+  url: https://github.com/th-koeln/mi-master-wtw/issues/new
