--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ google_analytics:
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 url: https://th-koeln.github.io/
+deployurl: https://th-koeln.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
