Nächsten 2 Wochen geplant

--- a/_config.yml
+++ b/_config.yml
@@ -93,13 +93,7 @@ plugins_dir:
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
 # Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
-  - _repos/*
+exclude: ['Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md', 'CNAME','_repos']
 
 collections:
   lehrveranstaltungen:
