--- a/_data/dates-web-technologien.yml
+++ b/_data/dates-web-technologien.yml
@@ -46,6 +46,11 @@ week-8:
     start: "13:00"
     end: "17:00"
     name: Dienstag
+  day-2:
+    datum: 2020-05-20
+    start: "13:00"
+    end: "15:00"
+    name: Mittwoch
 week-9:
   day-1:
     datum: 2020-05-26
