--- a/_data/dates-web-technologien.yml
+++ b/_data/dates-web-technologien.yml
@@ -46,11 +46,6 @@ week-8:
     start: "13:00"
     end: "17:00"
     name: Dienstag
-  day-2:
-    datum: 2020-05-20
-    start: "13:00"
-    end: "15:00"
-    name: Mittwoch
 week-9:
   day-1:
     datum: 2020-05-26
@@ -63,6 +58,11 @@ week-10:
     start: "13:00"
     end: "17:00"
     name: Dienstag
+  day-2:
+    datum: 2020-06-03
+    start: "13:00"
+    end: "17:00"
+    name: Mittwoch
 week-11:
   day-1:
     datum: 2020-06-09
@@ -75,6 +75,11 @@ week-12:
     start: "13:00"
     end: "17:00"
     name: Dienstag
+  day-2:
+    datum: 2020-06-17
+    start: "13:00"
+    end: "17:00"
+    name: Mittwoch
 week-13:
   day-1:
     datum: 2020-06-23
@@ -83,6 +88,11 @@ week-13:
     name: Dienstag
 week-14:
   day-1:
+    datum: 2020-06-29
+    start: "13:00"
+    end: "17:00"
+    name: Montag
+  day-2:
     datum: 2020-06-30
     start: "13:00"
     end: "17:00"
