--- a/_data/dates-web-technologien.yml
+++ b/_data/dates-web-technologien.yml
@@ -110,6 +110,18 @@ week-15:
     name: Dienstag
 week-16:
   day-1:
+    datum: 2020-08-04
+    start: "09:00"
+    end: "17:00"
+    name: Dienstag
+week-17:
+  day-1:
+    datum: 2020-09-08
+    start: "09:00"
+    end: "17:00"
+    name: Dienstag
+week-18:
+  day-1:
     datum: 2020-09-29
     start: "09:00"
     end: "17:00"
