--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
-# Zur Abtrannung der Aufgabe
-excerpt_separator: "<!--aufgabe-->"
+# Zur Abtrannung der marginalie
+excerpt_separator: "<!--marginalie-->"
 
 # Use the following plug-ins
 plugins_dir:
@@ -102,6 +102,8 @@ collections:
     output: true
   webtechnologien:
     output: false
+  projektthemen:
+    output: true
 
 defaults:
   -
