--- a/_data/dates-web-technologien.yml
+++ b/_data/dates-web-technologien.yml
@@ -1,90 +1,102 @@
 week-1:
   day-1:
-    datum: 2021-04-13
+    datum: 2022-03-29
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-2:
   day-1:
-    datum: 2021-04-20
+    datum: 2022-04-05
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-3:
   day-1:
-    datum: 2021-04-27
+    datum: 2022-04-12
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-4:
   day-1:
-    datum: 2021-05-04
+    datum: 2022-04-19
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-5:
   day-1:
-    datum: 2021-05-11
+    datum: 2022-04-26
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-6:
   day-1:
-    datum: 2021-05-18
+    datum: 2022-05-03
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-7:
   day-1:
-    datum: 2021-05-25
+    datum: 2022-05-10
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-8:
   day-1:
-    datum: 2021-06-01
+    datum: 2022-05-17
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-9:
   day-1:
-    datum: 2021-06-08
+    datum: 2022-05-24
     start: "09:00"
     end: "22:00"
     name: Dienstag
 week-10:
   day-1:
-    datum: 2021-06-15
+    datum: 2022-05-31
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-11:
   day-1:
-    datum: 2021-06-22
+    datum: 2022-06-07
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-12:
   day-1:
-    datum: 2021-06-28
+    datum: 2022-06-14
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-13:
   day-1:
-    datum: 2021-07-06
+    datum: 2022-06-21
     start: "09:00"
     end: "17:00"
     name: Dienstag
 week-14:
   day-1:
-    datum: 2021-07-12
+    datum: 2022-06-28
     start: "09:00"
     end: "13:00"
     name: Dienstag
 week-15:
   day-1:
-    datum: 2021-09-28
+    datum: 2022-07-05
+    start: "09:00"
+    end: "17:00"
+    name: Dienstag
+week-16:
+  day-1:
+    datum: 2022-07-12
+    start: "09:00"
+    end: "17:00"
+    name: Dienstag
+week-17:
+  day-1:
+    datum: 2022-09-28
     start: "09:00"
     end: "17:00"
     name: Dienstag
