--- a/_data/people.yml
+++ b/_data/people.yml
@@ -39,3 +39,6 @@ mk:
 aw:
   name: Anatol Walger
   email: anatol.walger@smail.fh-koeln.de
+nk:
+  name: Nathalie Kuhn
+  email: nathalie_michelle_severine.kuhn@th-koeln.de
