--- a/_data/dates-web-technologien.yml
+++ b/_data/dates-web-technologien.yml
@@ -1,96 +1,105 @@
 week-1:
   day-1:
-    datum: 2023-03-28
+    datum: "2024-04-16"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-2:
   day-1:
-    datum: 2023-04-04
+    datum: "2024-04-23"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-3:
   day-1:
-    datum: 2023-04-11
+    datum: "2024-04-30"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-4:
   day-1:
-    datum: 2023-04-18
+    datum: "2024-05-07"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-5:
   day-1:
-    datum: 2023-04-25
+    datum: "2024-05-14"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-6:
   day-1:
-    datum: 2023-05-02
+    datum: "2024-05-21"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-7:
   day-1:
-    datum: 2023-05-09
+    datum: "2024-05-28"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-8:
   day-1:
-    datum: 2023-05-16
+    datum: "2024-06-04"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-9:
   day-1:
-    datum: 2023-05-23
+    datum: "2024-06-11"
     start: "09:00"
     end: "22:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-10:
   day-1:
-    datum: 2023-05-30
+    datum: "2024-06-18"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-11:
   day-1:
-    datum: 2023-06-06
+    datum: "2024-06-25"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-12:
   day-1:
-    datum: 2023-06-13
+    datum: "2024-07-02"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-13:
   day-1:
-    datum: 2023-06-20
+    datum: "2024-07-09"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
 week-14:
   day-1:
-    datum: 2023-06-27
+    datum: "2024-07-16"
     start: "09:00"
     end: "13:00"
-    name: Dienstag
-week-15:
-  day-1:
-    datum: 2023-07-04
-    start: "09:00"
-    end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
+
+
 week-17:
   day-1:
-    datum: 2023-09-26
+    datum: "2024-09-24"
     start: "09:00"
     end: "17:00"
-    name: Dienstag
+    name: "Dienstag"
