--- a/_config.yml
+++ b/_config.yml
@@ -82,15 +82,15 @@ kramdown:
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :expanded # You might prefer to minify using :compressed
+  style: expanded # You might prefer to minify using :compressed
 
 # Zur Abtrannung der marginalie
 excerpt_separator: "<!--marginalie-->"
 
 # Use the following plug-ins
 plugins_dir:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  #- jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  # - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
 # Exclude these files from your production _site
 exclude: ['Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md', 'CNAME','_repos']
