--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 
 # Name of your site (displayed in the header)
 name: Weaving the Web
+title: Weaving the Web
 
 # Short bio or description (displayed in the header)
 description: Schwerpunkt im Medieninformatik Master
