Added Dates for ss 2025

--- a/_data/dates-web-technologien.yml
+++ b/_data/dates-web-technologien.yml
@@ -1,105 +1,111 @@
 week-1:
   day-1:
-    datum: "2024-04-16"
+    datum: "2025-04-01"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-2:
   day-1:
-    datum: "2024-04-23"
+    datum: "2025-04-08"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-3:
   day-1:
-    datum: "2024-04-30"
+    datum: "2025-04-15"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-4:
   day-1:
-    datum: "2024-05-07"
+    datum: "2025-04-22"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-5:
   day-1:
-    datum: "2024-05-14"
+    datum: "2025-04-29"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-6:
   day-1:
-    datum: "2024-05-21"
+    datum: "2025-05-06"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-7:
   day-1:
-    datum: "2024-05-28"
+    datum: "2025-05-13"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-8:
   day-1:
-    datum: "2024-06-04"
+    datum: "2025-05-20"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-9:
   day-1:
-    datum: "2024-06-11"
+    datum: "2025-05-27"
     start: "09:00"
     end: "22:00"
     name: "Dienstag"
 
 week-10:
   day-1:
-    datum: "2024-06-18"
+    datum: "2025-06-03"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-11:
   day-1:
-    datum: "2024-06-25"
+    datum: "2025-06-10"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-12:
   day-1:
-    datum: "2024-07-02"
+    datum: "2025-06-17"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-13:
   day-1:
-    datum: "2024-07-09"
+    datum: "2025-06-24"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
 
 week-14:
   day-1:
-    datum: "2024-07-16"
+    datum: "2025-07-01"
     start: "09:00"
     end: "13:00"
     name: "Dienstag"
 
+week-15:
+  day-1:
+    datum: "2025-07-08"
+    start: "09:00"
+    end: "13:00"
+    name: "Dienstag"
 
 week-17:
   day-1:
-    datum: "2024-09-24"
+    datum: "2025-09-24"
     start: "09:00"
     end: "17:00"
     name: "Dienstag"
